# cleancodecpp

./: .gitignore  .gitmodules  AboutMe.md  CMakeLists.txt  CleanCodePrinciples.md  Introduction.md  References.md  conanfile.txt
.run/: All Tests.run.xml
bowling-game/: CMakeLists.txt  bowling_game.cxx  bowling_game.hxx  bowling_game_tests.cxx  rules.md
contrib/: CMakeLists.txt
examples/: CMakeLists.txt  bowling_game.cxx  bowling_game.hxx  bowling_game_tests.cxx  compile_time_fizzbuzz.cxx  composition.cxx  fiddle.cxx  fiddle_tests.cxx  isp.cxx  liskov_substitution.cxx  list.hxx  list_tests.cxx  roman_numeral_converter.cxx  roman_numeral_converter.hxx  roman_numeral_converter_tests.cxx  rule_0_3_5.cxx  single_responsibility.cxx  small_object_allocator.cxx
examples/day1/: composition_via_private_inheritance.cxx  rule_of_0_3_5.cxx  shared_ptr_workings.cxx  solid.cxx  surprise_remove_does_not_remove.cxx  unsorted.cxx
examples/day2/: compile_time_fizzbuzz.cxx  templates.cxx
examples/day3/: pointers.cxx  threads.cxx
examples/gilded-rose/: CMakeLists.txt  README.md  item.hxx  main.cxx  shop.cxx  shop.hxx  test.cxx
game-of-life/: notes.md  rules.md
game-of-life/src/: CMakeLists.txt  CellState.hxx  ConsoleUserInterface.cxx  ConsoleUserInterface.hxx  DllInterface.hxx  Randomizer.hxx  StdRandomizer.cxx  StdRandomizer.hxx  UserInterface.hxx  World.cxx  World.hxx  main.cxx
game-of-life/test/: CMakeLists.txt  ConsoleUserInterfaceTest.cxx  MockRandomizer.hxx  MockUserInterface.hxx  StdRandomizerTest.cxx  WorldTest.cxx
gilded-rose/: CMakeLists.txt  item.hxx  main.cxx  shop.cxx  shop.hxx  test.cxx
guess-the-number/src/: CMakeLists.txt  CheckResult.hxx  Console.cxx  Console.hxx  ConsoleUserInterface.cxx  ConsoleUserInterface.hxx  GameIO.hxx  GuessTheNumber.cxx  GuessTheNumber.hxx  GuessTheNumberIO.cxx  GuessTheNumberIO.hxx  IODevice.hxx  RandomNumberGenerator.hxx  Result.hxx  StdRandomNumberGenerator.cxx  StdRandomNumberGenerator.hxx  UserInterface.hxx  main.cxx
guess-the-number/test/: CMakeLists.txt  ConsoleUserInterfaceTest.cxx  GuessTheNumberIOTest.cxx  GuessTheNumberTest.cxx  IODeviceMock.hxx  MockRandomNumberGenerator.hxx  MockUserInterface.hxx  StdRandomNumberGeneratorTest.cxx
roman-numeral-converter/: CMakeLists.txt  roman_numeral_converter.cxx  roman_numeral_converter_tests.cxx
